# ppmm

./: Cargo.toml  README.md
.github/workflows/: autolabler.yml
ppmm_lock/: README.md  pyproject.toml  requirements.txt
ppmm_lock/ppmm_lock/: __init__.py  __main__.py  cli.py  lockfile.py  resolver.py  scanner.py  version.py
ppmm_lock/ppmm_lock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ppmm_lock/tests/: test_cli.py  test_lockfile.py  test_resolver.py  test_version.py
src/: main.rs  ppm_functions.rs  project_managers.rs  settings.rs  utils.rs
