[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppmm-lock"
version = "1.0.0"
description = "Dependency Lock & Version Management module for PPMM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "sumangal44"},
]
keywords = ["python", "dependency", "lock", "version", "security", "audit"]

dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ppmm-lock = "ppmm_lock.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
